datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
  // previewFeatures = []
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
  id           String         @id @default(cuid())
  createdAt    DateTime       @default(now())
  updatedAt    DateTime       @updatedAt
  email        String         @unique
  password     String
  firstname    String?
  lastname     String?
  refreshTokens RefreshToken[]
  ratedMemes   RatedMemes?
}

model Meme {
  id           String         @id @default(cuid())
  createdAt    DateTime       @default(now())
  updatedAt    DateTime       @updatedAt
  imageId      String         @unique
  text         String?
  source       SourceType
  sourceId     String
}

enum SourceType {
  TELEGRAM
  UPLOADED
}

model RatedMemes {
    id          String  @id @default(cuid())
    liked       String[]
    disliked    String[]
    user        User    @relation(references: [id], fields: [userId])
    userId      String  @unique
}

enum Role {
  ADMIN
  USER
}

model RefreshToken {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  user      User?    @relation(references: [id], fields: [userId])
  userId    String
}
