//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String
  lastname String
  refreshTokens RefreshToken [not null]
  ratedMemes RatedMemes
}

Table Meme {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  imageId String [unique, not null]
  text String
  source SourceType [not null]
  sourceId String [not null]
}

Table RatedMemes {
  id String [pk]
  liked String [not null]
  disliked String [not null]
  user User [not null]
  userId String [unique, not null]
}

Table RefreshToken {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  user User
  userId String [not null]
}

Enum SourceType {
  TELEGRAM
  UPLOADED
}

Enum Role {
  ADMIN
  USER
}

Ref: RatedMemes.userId - User.id

Ref: RefreshToken.userId > User.id